feat: improve better ux on customer detail
