# src/gen/models/CustomerTransactionsResponse.ts
@@ -1,0 +1,101 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Pontuaí
+ * The Pontuaí API experience :)
+ *
+ * The version of the OpenAPI document: 1.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+import type { TransactionResponse } from './TransactionResponse';
+import {
+    TransactionResponseFromJSON,
+    TransactionResponseFromJSONTyped,
+    TransactionResponseToJSON,
+    TransactionResponseToJSONTyped,
+} from './TransactionResponse';
+
+/**
+ * 
+ * @export
+ * @interface CustomerTransactionsResponse
+ */
+export interface CustomerTransactionsResponse {
+    /**
+     * List of transactions for the current page
+     * @type {Array<TransactionResponse>}
+     * @memberof CustomerTransactionsResponse
+     */
+    data: Array<TransactionResponse>;
+    /**
+     * Total number of transactions available (all pages)
+     * @type {number}
+     * @memberof CustomerTransactionsResponse
+     */
+    totalItems: number;
+    /**
+     * Current page number
+     * @type {number}
+     * @memberof CustomerTransactionsResponse
+     */
+    currentPage: number;
+    /**
+     * Total number of pages available
+     * @type {number}
+     * @memberof CustomerTransactionsResponse
+     */
+    totalPages: number;
+}
+
+/**
+ * Check if a given object implements the CustomerTransactionsResponse interface.
+ */
+export function instanceOfCustomerTransactionsResponse(value: object): value is CustomerTransactionsResponse {
+    if (!('data' in value) || value['data'] === undefined) return false;
+    if (!('totalItems' in value) || value['totalItems'] === undefined) return false;
+    if (!('currentPage' in value) || value['currentPage'] === undefined) return false;
+    if (!('totalPages' in value) || value['totalPages'] === undefined) return false;
+    return true;
+}
+
+export function CustomerTransactionsResponseFromJSON(json: any): CustomerTransactionsResponse {
+    return CustomerTransactionsResponseFromJSONTyped(json, false);
+}
+
+export function CustomerTransactionsResponseFromJSONTyped(json: any, ignoreDiscriminator: boolean): CustomerTransactionsResponse {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'data': ((json['data'] as Array<any>).map(TransactionResponseFromJSON)),
+        'totalItems': json['totalItems'],
+        'currentPage': json['currentPage'],
+        'totalPages': json['totalPages'],
+    };
+}
+
+export function CustomerTransactionsResponseToJSON(json: any): CustomerTransactionsResponse {
+    return CustomerTransactionsResponseToJSONTyped(json, false);
+}
+
+export function CustomerTransactionsResponseToJSONTyped(value?: CustomerTransactionsResponse | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'data': ((value['data'] as Array<any>).map(TransactionResponseToJSON)),
+        'totalItems': value['totalItems'],
+        'currentPage': value['currentPage'],
+        'totalPages': value['totalPages'],
+    };
+}
+
