# src/gen/models/GetCustomerBalanceStatsResponse.ts
@@ -1,0 +1,93 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Pontuaí
+ * The Pontuaí API experience :)
+ *
+ * The version of the OpenAPI document: 1.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface GetCustomerBalanceStatsResponse
+ */
+export interface GetCustomerBalanceStatsResponse {
+    /**
+     * Total points earned by the customer through input transactions
+     * @type {number}
+     * @memberof GetCustomerBalanceStatsResponse
+     */
+    earnedPoints: number;
+    /**
+     * Total points redeemed by the customer through output transactions
+     * @type {number}
+     * @memberof GetCustomerBalanceStatsResponse
+     */
+    redeemedPoints: number;
+    /**
+     * Total points expired for the customer
+     * @type {number}
+     * @memberof GetCustomerBalanceStatsResponse
+     */
+    expiredPoints: number;
+    /**
+     * Total loyalty or reward points accumulated by the member
+     * @type {number}
+     * @memberof GetCustomerBalanceStatsResponse
+     */
+    points: number;
+}
+
+/**
+ * Check if a given object implements the GetCustomerBalanceStatsResponse interface.
+ */
+export function instanceOfGetCustomerBalanceStatsResponse(value: object): value is GetCustomerBalanceStatsResponse {
+    if (!('earnedPoints' in value) || value['earnedPoints'] === undefined) return false;
+    if (!('redeemedPoints' in value) || value['redeemedPoints'] === undefined) return false;
+    if (!('expiredPoints' in value) || value['expiredPoints'] === undefined) return false;
+    if (!('points' in value) || value['points'] === undefined) return false;
+    return true;
+}
+
+export function GetCustomerBalanceStatsResponseFromJSON(json: any): GetCustomerBalanceStatsResponse {
+    return GetCustomerBalanceStatsResponseFromJSONTyped(json, false);
+}
+
+export function GetCustomerBalanceStatsResponseFromJSONTyped(json: any, ignoreDiscriminator: boolean): GetCustomerBalanceStatsResponse {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'earnedPoints': json['earnedPoints'],
+        'redeemedPoints': json['redeemedPoints'],
+        'expiredPoints': json['expiredPoints'],
+        'points': json['points'],
+    };
+}
+
+export function GetCustomerBalanceStatsResponseToJSON(json: any): GetCustomerBalanceStatsResponse {
+    return GetCustomerBalanceStatsResponseToJSONTyped(json, false);
+}
+
+export function GetCustomerBalanceStatsResponseToJSONTyped(value?: GetCustomerBalanceStatsResponse | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'earnedPoints': value['earnedPoints'],
+        'redeemedPoints': value['redeemedPoints'],
+        'expiredPoints': value['expiredPoints'],
+        'points': value['points'],
+    };
+}
+
