# src/gen/models/index.ts
@@ -9,9 +9,10 @@ export * from './CreateRewardResponse';
 export * from './CreateTenantDto';
 export * from './CreateTenantResponse';
 export * from './CustomerResponse';
+export * from './CustomerTransactionsResponse';
 export * from './CustomerWithPointsResponse';
+export * from './GetCustomerBalanceStatsResponse';
 export * from './GetCustomerDetailResponse';
-export * from './GetCustomerTransactionDetailResponse';
 export * from './GetTenant';
 export * from './PaginatedCustomerResponse';
 export * from './PointConfig';
